--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                 <h1>
 
                         HELLO AJIT FROM DOCKER FILE </h1>
-                <h2> WELCOME TO DEPVOPS </h2>
+                <h2> DEVOPS SUCCESSFUL
         </body>
         </html>
 
