--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
         <body >
                 <h1>
 
-                        HELLO AJIT FROM DOCKER FILE </h1>
-                <h2> DEVOPS SUCCESSFUL   with jenkins </h2>
-                <h3> ajit kumar Cloud operations engineer </h3>
-                        
+                       HELLO AJIT  </h1>
+                <h2> YOU HAVE SUCCESSFULLY IMPLEMENTED JENKINS TO AUTOMATE THE CODE FROM GIT </h2>
+                <h3> CONGRATULATIONS HAVE A NICE DAY
         </body>
         </html>
 
