--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1> HELLO AJIT___WELCOME TO DEVOPS____THIS IS CICD WORKING ON BOTH TEST AND PROD
+<h1> HELLO AJIT___WELCOME TO DEVOPS____THIS IS CICD WORKING ON BOTH TEST AND PRODuction
   </h1>
 
 </body>
