--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <body>
 
-<h1> HELLO AJIT___WELCOME TO DEVOPS____THIS IS CICD WORKING ON BOTH TEST AND PRODuction
+<h1>HELLO AJIT,
+  \n
+  <h2> this is cloud devops by jenkins </h2>
   </h1>
 
 </body>
