--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <font size="6"
           face="verdana"
           color="green"> 
-            AJIT KUMAR ! 
+            AJIT KUMAR  welcomes devops! 
         </font> 
 <h1>HELLO AJAY,
   \n
